@@ -80,6 +80,7 @@ enum
 {
     INTENT_ACTION_MAP,
     INTENT_ACTION_NEW_RIDE_OF_TYPE,
+    INTENT_ACTION_REFRESH_CAMPAIGN_RIDE_LIST,
     INTENT_ACTION_REFRESH_NEW_RIDES,
     INTENT_ACTION_REFRESH_RIDE_LIST,
     INTENT_ACTION_UPDATE_MAZE_CONSTRUCTION,
